# pytest-human

./: .gitignore  README.md  README.rst  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: main.yml
assets/: test_pizza.html
docs/: index.md
src/pytest_human/: _exceptions.py  _flags.py  _hooks.py  code_style.py  fixtures.py  html_report.py  human.py  log.py  plugin.py
tests/: conftest.py  test_artifacts.py  test_example.py  test_flags.py  test_header.py  test_logging.py  test_parameterized.py  test_search.py  utils.py
tests/examples/: test_example.py
tests/unit/: test_logs.py
